test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/plx1_sizeof_incr_prefix.plx
pub fn main(none) i32 {
    return ++sizeof<i32>
}
